[package]
name = "define"
version = "0.1.0"
authors = ["Dave Minter <dave@paperstack.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
shellexpand = "2.1.0"
log = "0.4.14"
env_logger = "0.8.3"