[package]
name = "define"
version = "0.3.3"
authors = ["Dave Minter <dave@paperstack.com>"]
edition = "2018"
license = "MIT"

[dependencies]
clap = { version = "4.1.4", features = [ "derive" ] }
shellexpand = "2.1.0"
log = "0.4.14"
env_logger = "0.8.3"
ansi_term = "0.12.1"
atty = "0.2.14"
regex = "1.4.6"
